--- a/style.css
+++ b/style.css
@@ -147,6 +147,22 @@ header {
     margin: 0 0.3rem;
 }
 
+
+#keyboard button.absent {
+    background-color: #787c7e;
+    color: white;
+}
+
+#keyboard button.present {
+    background-color: #c9b458;
+    color: white;
+}
+
+#keyboard button.correct {
+    background-color: #6aaa64;
+    color: white;
+}
+
 #keyboard .spacer {
     flex: 0.5;
 }
