--- a/style.css
+++ b/style.css
@@ -158,16 +158,6 @@ h2 {
     border: none;
 }
 
-.letter.start {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.letter.end {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-}
-
 .letter.tail::before {
     content: "";
     display: block;
@@ -179,6 +169,30 @@ h2 {
     left: -.2rem;
     right: -.2rem;
     transform: translate(-50%, 0);
+}
+
+.letter.start::after {
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: #55ad5e;
+    z-index: -10;
+    top: 0;
+    bottom: 0;
+    left: -50rem;
+    right: 50%;
+}
+
+.letter.end::after {
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: #55ad5e;
+    z-index: -10;
+    top: 0;
+    bottom: 0;
+    right: -50rem;
+    left: 50%;
 }
 
 #keyboard {
@@ -302,7 +316,7 @@ h2 {
     align-items: center;
 }
 
-#share_button {
+#share_button, #share_image_button  {
     background-color: #55ad5e;
     color: white;
     font-family: inherit;
@@ -318,7 +332,11 @@ h2 {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0.3);
     width: 40%;
     font-size: 20px;
+    margin: 0 1rem;
     height: 52px;
+}
+#share_image_button {
+    width: 52px;
 }
 
 #help, #stats{
@@ -327,6 +345,7 @@ h2 {
     top: 100vh;
     width: 50rem;
     height: 100vh;
+    overflow: hidden;
     background-color: white;
     opacity: 0;
     transition: 0.3s ease-in-out;
